# pybsqr

./: pyproject.toml
pybsqr/: base.py  bysquare.py  bysquare.xsd  cli.py  invoice.py  model.py  pay.py  xml.py
