[tool.poetry]
name = "pybsqr"
version = "0.1.0"
description = ""
authors = ["Michal Juranyi <michal.juranyi@vnet.eu>"]
readme = "README.md"
license = "LGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.10"
qrcode = "^7.4.2"
lxml = "^5.2.1"

[tool.poetry.extras]
pil = ["pillow"]

[tool.poetry.scripts]
pybsqr = "pybsqr.cli:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
